# docker_test

./: Dockerfile  README.md  pyproject.toml
src/docker_test/: __init__.py  app.py
src/docker_test/templates/: index.html
