[project]
name = "docker-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paco279pi", email = "pacoberort@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "matplotlib",
    "jinja2>=3.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
app = "src.docker_test.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docker_test"]
